package seedu.address.model.project;

public enum Status {
    CATALOGUE, PROJECT, PERSON, TASK; //TODO: May add more
}
